# iron-conquer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  browse.sh  run.sh
.claude/: settings.json
src/: debug_log.c  debug_log.h  game.c  game.h  main.c  palette.c  palette.h  pathfind.c  pathfind.h  shp.c  shp.h  tilemap.c  tilemap.h  tmp.c  tmp.h  units.c  units.h
